--- a/src/components/Autosuggestion/Autosuggestion.css
+++ b/src/components/Autosuggestion/Autosuggestion.css
@@ -1,3 +1,8 @@
+.parent {
+  display: flex;
+  justify-content: center;
+}
+
 .inputText {
   border: 5px solid #0d8bf2; 
   -webkit-box-shadow: 
@@ -12,7 +17,8 @@
   padding: 15px;
   background: rgba(255,255,255,0.3);
   margin: 0 10px 10px 0;
-  width: 55% !important;
+  /* width: 1000px; */
+  width: 60%;
   border-radius: 5rem;
   font-size: 16px;
   font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
@@ -35,26 +41,17 @@
 .suggestions {  
   /* visibility: hidden; */
   position: absolute;
+  top: 75px;
+  width: 60%;
   z-index: 100;
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 20px;
 }
 
 .suggestions div{
   list-style-type: none;
   border-radius: 5rem;
-  width: 70%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-block-start: 0 !important;
-  margin-block-end: 0 !important;
-  margin-inline-start: 0 !important;
-  margin-inline-end: 0 !important;
-  padding-inline-start: 0 !important;
+  /* align-items: center; */  
 }
 
 .showlist {
@@ -63,7 +60,7 @@
 
 .suggestions div span {
   padding: 10px;
+  /* width: 500px; */
   border-bottom: 0.5px solid #888;  
   background-color: rgba(255, 255, 255, 1);
-  width: inherit;
 }
